Reinstate stricter compilation checks